--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://www.svgrepo.com/show/382526/copy-document-extension-file-file-format-file-type.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CorrigeAí</title>
+    <!-- meta og -->
+    <meta property="og:title" content="Corrige-Ai" />
+    <meta property="og:description" content="Corrige-Ai" />
+    <meta
+      property="og:image"
+      content="https://www.svgrepo.com/show/382526/copy-document-extension-file-file-format-file-type.svg"
+    />
+    <meta property="og:url" content="https://corrige-ai.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Corrige-Ai" />
+
+    <!-- meta twitter -->
+    <meta name="twitter:title" content="Corrige-Ai" />
+    <meta name="twitter:description" content="Corrige-Ai" />
+    <meta
+      name="twitter:image"
+      content="https://www.svgrepo.com/show/382526/copy-document-extension-file-file-format-file-type.svg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="Corrige-Ai" />
+    <meta name="twitter:creator" content="Corrige-Ai" />
+
+    <meta name="description" content="Corrige-Ai" />
+
+    <title>Corrige-Ai</title>
   </head>
   <body>
     <div id="root"></div>
