--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- meta og -->
-    <meta property="og:title" content="Corrige-Ai" />
-    <meta property="og:description" content="Corrige-Ai" />
+    <meta property="og:title" content="Corrige-Ia" />
+    <meta property="og:description" content="Corrige-Ia" />
     <meta
       property="og:image"
       content="https://www.svgrepo.com/show/382526/copy-document-extension-file-file-format-file-type.svg"
     />
-    <meta property="og:url" content="https://corrige-ai.vercel.app/" />
+    <meta property="og:url" content="https://corrige-Ia.vercel.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Corrige-Ai" />
+    <meta property="og:site_name" content="Corrige-Ia" />
 
     <!-- meta twitter -->
-    <meta name="twitter:title" content="Corrige-Ai" />
-    <meta name="twitter:description" content="Corrige-Ai" />
+    <meta name="twitter:title" content="Corrige-Ia" />
+    <meta name="twitter:description" content="Corrige-Ia" />
     <meta
       name="twitter:image"
       content="https://www.svgrepo.com/show/382526/copy-document-extension-file-file-format-file-type.svg"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="Corrige-Ai" />
-    <meta name="twitter:creator" content="Corrige-Ai" />
+    <meta name="twitter:site" content="Corrige-Ia" />
+    <meta name="twitter:creator" content="Corrige-Ia" />
 
-    <meta name="description" content="Corrige-Ai" />
+    <meta name="description" content="Corrige-Ia" />
 
-    <title>Corrige-Ai</title>
+    <title>Corrige-ia</title>
   </head>
   <body>
     <div id="root"></div>
